--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
                         Sculpting digital serenity for Panvel's hospitality at PeacefulStudio. Navigate a tranquil web
                         journey, where each click unfolds a comfort-rich experience.
                     </p>
-                    <a href="#">read more</a>
+                    <a href="https://www.peacefulstudio.com">View website</a>
                 </div>
             </div>
             <div class="box">
@@ -76,7 +76,7 @@
                     <h3>project 02</h3>
                     <p>Discover elegance at JainamBanquets. I've developed a seamless website, unfolding comfort in
                         every click. Explore our exquisite banquet spaces.</p>
-                    <a href="#">read more</a>
+                    <a href="https://www.jainambanquethall.com">View website</a>
                 </div>
             </div>
             <div class="box">
@@ -86,7 +86,7 @@
                     <h3>project 03</h3>
                     <p>Indulge in wellness at NutrifyMeals. My crafted website unveils a world of healthy dining.
                         Explore nutritious meals with every click.</p>
-                    <a href="#">read more</a>
+                    <a href="https://www.nutrifymeals.in">View website</a>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
                     <h3>project 04</h3>
                     <p>Experience excellence at Nexon Creation. I've sculpted a seamless website showcasing precision in
                         signage manufacturing. Explore our craftsmanship with every click."</p>
-                    <a href="#">read more</a>
+                    <a href="https://rahulborhade.github.io/Nexoncreation/">View website</a>
                 </div>
             </div>
             <div class="box">
@@ -108,7 +108,7 @@
                     <h3>project 05</h3>
                     <p>Explore Shree Sai Civil Works online. I've crafted a seamless website to showcase our
                         construction prowess. Unveil the strength in every click.</p>
-                    <a href="#">read more</a>
+                    <a href="https://rahulborhade.github.io/civilworks/">View website</a>
                 </div>
             </div>
             <div class="box">
