--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
                     <a href="https://www.peacefulstudio.com">View website</a>
                 </div>
             </div>
-            <div class="box">
+<!--             <div class="box">
                 <div class="sale-banner">WEBSITE</div>
                 <img src="./images/jainambanquethall.png" alt="">
                 <div class="content">
@@ -78,7 +78,7 @@
                         every click. Explore our exquisite banquet spaces.</p>
                     <a href="https://www.jainambanquethall.com">View website</a>
                 </div>
-            </div>
+            </div> -->
             <div class="box">
                 <div class="sale-banner">WEBSITE</div>
                 <img src="./images/nutrifymeals.png" alt="">
