--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
 
-                <a href="./images/RAHUL BORHADE PORTFOLIO.pdf" class="btn">download CV
+                <a href="./images/RAHUL BORHADE PORTFOLssIO.pdf" class="btn">download CV
                     <i class="fas fa-download"></i>
                 </a>
             </div>
